--- a/provisioning/roles/erlang/tasks/main.yml
+++ b/provisioning/roles/erlang/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: Build Erlang OTP R15B01, R15B04 and R16B02-basho8 with kerl
+- name: Build Erlang OTP R15B01-basho R16B02-basho8 with kerl
   script: build_otp.sh
