Add missing CentOS installs

--- a/provisioning/roles/prerequisites/tasks/centos65.yml
+++ b/provisioning/roles/prerequisites/tasks/centos65.yml
@@ -25,6 +25,7 @@
     - ncurses-devel
     - openssl-devel
     - pam-devel
+    - patch
     - readline-devel
     - sqlite-devel
     - vim-enhanced
