--- a/provisioning/roles/jdk/tasks/ubuntu1404.yml
+++ b/provisioning/roles/jdk/tasks/ubuntu1404.yml
@@ -1,7 +1,7 @@
 ---
 - name: Prepare to install Oracle JDK from apt
   sudo: true
-  apt: name={{ item }} state=present
+  apt: name={{ item }} state=present update_cache=yes
   with_items:
     - python-software-properties
     - python-apt
