Automate dot-file installation and cleanup prompt

--- a/provisioning/roles/prerequisites/tasks/main.yml
+++ b/provisioning/roles/prerequisites/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Copy Dot Files
+  command: mv /vagrant/.[a-z]* /home/vagrant
+
 - name: Build Ubuntu Version
   include: ubuntu1404.yml
   when: ansible_distribution == 'Ubuntu'
