--- a/provisioning/roles/prerequisites/tasks/main.yml
+++ b/provisioning/roles/prerequisites/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy Dot Files
-  command: mv /vagrant/dot/.[a-z]* /home/vagrant
+  shell: cp -pR /vagrant/dot/.[a-z]* /home/vagrant
 
 - name: Build Ubuntu Version
   include: ubuntu1404.yml
