--- a/provisioning/roles/prerequisites/tasks/ubuntu1404.yml
+++ b/provisioning/roles/prerequisites/tasks/ubuntu1404.yml
@@ -14,6 +14,8 @@
     - git
     - libbz2-dev
     - libffi-dev
+    - libfuse-dev
+    - libgcrypt-dev
     - libglib2.0-dev
     - libncurses-dev
     - libpam0g-dev
