--- a/provisioning/roles/prerequisites/tasks/main.yml
+++ b/provisioning/roles/prerequisites/tasks/main.yml
@@ -2,10 +2,6 @@
 - name: Copy Dot Files
   shell: cp -pR /vagrant/dot/.[a-z]* /home/vagrant
 
-- name: Build Ubuntu Version
-  include: ubuntu1404.yml
-  when: ansible_distribution == 'Ubuntu'
-
-- name: Build CentOS Version
-  include: centos65.yml
-  when: ansible_distribution == 'CentOS' and ansible_distribution_version >= '6.5'
+- name: Build Correct OS Version
+  include: "{{ ansible_os_family }}.yml"
+  when: ansible_os_family == 'Debian' or ansible_os_family == 'RedHat'
